--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Industry:</strong> <span>FinTech</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Pursuing MS in AI</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Industry:</strong> <span>Technology / Investment Banking</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Pursuing MSc Financial Engineering from World Quant University</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Work Mail:</strong>
                   <span>shreyaverma.sva@gmail.com</span>
                 </li>
